--- a/foryou.html
+++ b/foryou.html
@@ -3,15 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Selamat Hari Jadi!</title>
+<title>Selamat Hari Jadi Aiwa Jailin!</title>
 <style>
   body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #a8dadc, #f1faee);
+    background: linear-gradient(to bottom, #a8dadc, #caf0f8); /* biru lembut */
     font-family: 'Comic Sans MS', cursive, sans-serif;
     overflow: hidden;
     color: #1d3557;
+    cursor: pointer;
   }
   #lyrics {
     position: fixed;
@@ -28,26 +29,40 @@
     width: 100%;
     text-align: center;
     font-size: 2em;
+    color: #1d3557;
+    text-shadow: 1px 1px 5px #fff;
+  }
+  #startOverlay {
+    position: fixed;
+    top:0; left:0; width:100%; height:100%;
+    background: rgba(0,0,0,0.3);
+    color: #fff;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    font-size:2em;
+    z-index:1000;
+    text-align:center;
   }
   canvas {
     position: fixed;
-    top: 0;
-    left: 0;
-    pointer-events: none;
+    top:0; left:0;
+    pointer-events:none;
   }
 </style>
 </head>
 <body>
 
+<div id="startOverlay">Klik mana-mana untuk mula 🎵</div>
 <div id="message"></div>
 <div id="lyrics"></div>
 
-<audio id="bgMusic" src="CanICallYouTonight.mp3" autoplay loop></audio>
+<audio id="bgMusic" src="CanICallYouTonight.mp3" loop></audio>
 
 <canvas id="particleCanvas"></canvas>
 
 <script>
-// ===== Typing effect for birthday message =====
+// ===== Typing effect =====
 const message = "Selamat Hari Jadi Aiwa Jailin! 🌸 Semoga hari ini penuh bahagia 💙";
 const messageEl = document.getElementById("message");
 let index = 0;
@@ -58,7 +73,6 @@ function typeMessage() {
     setTimeout(typeMessage, 100);
   }
 }
-typeMessage();
 
 // ===== Lyrics syncing =====
 const lyrics = [
@@ -71,7 +85,6 @@ const lyrics = [
   { time: 72, text: "Just how I feel" },
   { time: 76, text: "Could you tell me what's real anymore?" },
   { time: 80, text: "Cause I wouldn't know" },
-  // Tambah lirik seterusnya ikut video YouTube
 ];
 
 const audio = document.getElementById("bgMusic");
@@ -88,81 +101,83 @@ function syncLyrics() {
   lyricsEl.textContent = currentLine;
   requestAnimationFrame(syncLyrics);
 }
-syncLyrics();
 
-// ===== Particle & balloons =====
+// ===== Particle & confetti =====
 const canvas = document.getElementById("particleCanvas");
 const ctx = canvas.getContext("2d");
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
-
 let particles = [];
 
-function random(min, max) { return Math.random() * (max - min) + min; }
+function random(min,max){return Math.random()*(max-min)+min;}
 
 class Particle {
-  constructor(x, y, type) {
-    this.x = x;
-    this.y = y;
-    this.type = type; // 'heart' or 'balloon'
-    this.size = random(5, 15);
-    this.speedY = random(-1, -3);
-    this.speedX = random(-0.5, 0.5);
-    this.opacity = 1;
-    this.color = type === 'heart' ? '#ff6b6b' : `hsl(${random(0, 360)}, 80%, 60%)`;
+  constructor(x,y,type){
+    this.x=x; this.y=y; this.type=type;
+    this.size=random(5,15);
+    this.speedY=random(-1.5,-3);
+    this.speedX=random(-1,1);
+    this.opacity=1;
+    this.color = type==='heart'? '#ff6b6b': type==='confetti'? `hsl(${random(0,360)},80%,60%)`:'#caf0f8';
   }
-  update() {
+  update(){
     this.y += this.speedY;
     this.x += this.speedX;
-    this.opacity -= 0.005;
-    if (this.opacity < 0) this.opacity = 0;
+    this.opacity -=0.01;
+    if(this.opacity<0) this.opacity=0;
   }
-  draw() {
-    ctx.globalAlpha = this.opacity;
-    if (this.type === 'heart') {
-      ctx.fillStyle = this.color;
+  draw(){
+    ctx.globalAlpha=this.opacity;
+    if(this.type==='heart'){
+      ctx.fillStyle=this.color;
       ctx.beginPath();
-      ctx.moveTo(this.x, this.y);
-      ctx.bezierCurveTo(this.x, this.y - this.size / 2, this.x - this.size, this.y - this.size / 2, this.x - this.size, this.y);
-      ctx.bezierCurveTo(this.x - this.size, this.y + this.size / 2, this.x, this.y + this.size / 1.5, this.x, this.y + this.size);
-      ctx.bezierCurveTo(this.x, this.y + this.size / 1.5, this.x + this.size, this.y + this.size / 2, this.x + this.size, this.y);
-      ctx.bezierCurveTo(this.x + this.size, this.y - this.size / 2, this.x, this.y - this.size / 2, this.x, this.y);
+      ctx.moveTo(this.x,this.y);
+      ctx.bezierCurveTo(this.x,this.y-this.size/2,this.x-this.size,this.y-this.size/2,this.x-this.size,this.y);
+      ctx.bezierCurveTo(this.x-this.size,this.y+this.size/2,this.x,this.y+this.size/1.5,this.x,this.y+this.size);
+      ctx.bezierCurveTo(this.x,this.y+this.size/1.5,this.x+this.size,this.y+this.size/2,this.x+this.size,this.y);
+      ctx.bezierCurveTo(this.x+this.size,this.y-this.size/2,this.x,this.y-this.size/2,this.x,this.y);
       ctx.fill();
     } else {
-      ctx.fillStyle = this.color;
+      ctx.fillStyle=this.color;
       ctx.beginPath();
-      ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+      ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
       ctx.fill();
     }
-    ctx.globalAlpha = 1;
+    ctx.globalAlpha=1;
   }
 }
 
-function animate() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  for (let i = particles.length - 1; i >= 0; i--) {
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  for(let i=particles.length-1;i>=0;i--){
     particles[i].update();
     particles[i].draw();
-    if (particles[i].opacity <= 0) {
-      particles.splice(i, 1);
-    }
+    if(particles[i].opacity<=0) particles.splice(i,1);
   }
   requestAnimationFrame(animate);
 }
 animate();
 
-window.addEventListener('mousemove', function(e) {
-  for (let i = 0; i < 2; i++) {
-    particles.push(new Particle(e.clientX + random(-10,10), e.clientY + random(-10,10), 'heart'));
-    particles.push(new Particle(e.clientX + random(-10,10), e.clientY + random(-10,10), 'balloon'));
+window.addEventListener('mousemove', function(e){
+  for(let i=0;i<3;i++){
+    particles.push(new Particle(e.clientX+random(-10,10),e.clientY+random(-10,10),'heart'));
+    particles.push(new Particle(e.clientX+random(-10,10),e.clientY+random(-10,10),'confetti'));
   }
 });
 
-window.addEventListener('resize', function() {
+window.addEventListener('resize', function(){
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
 });
-</script>
 
+// ===== Click to start music =====
+const startOverlay = document.getElementById("startOverlay");
+startOverlay.addEventListener('click', ()=>{
+  audio.play();
+  typeMessage();
+  syncLyrics();
+  startOverlay.style.display = 'none';
+});
+</script>
 </body>
 </html>
