--- a/foryou.html
+++ b/foryou.html
@@ -22,6 +22,7 @@
     font-size: 2em;
     color: #1d3557;
     text-shadow: 1px 1px 5px #fff;
+    pointer-events: none;
   }
   #lyrics {
     position: fixed;
@@ -157,15 +158,16 @@ class Particle {
   constructor(x,y,type){
     this.x=x; this.y=y; this.type=type;
     this.size=random(5,15);
-    this.speedY=random(-1.5,-3);
+    this.speedY=type==='balloon'?random(-0.3,-1):random(-1.5,-3);
     this.speedX=random(-1,1);
     this.opacity=1;
-    this.color = type==='heart'? '#ff6b6b': type==='confetti'? `hsl(${random(0,360)},80%,60%)`:'#caf0f8';
+    this.color = type==='heart'? '#ff6b6b': type==='confetti'? `hsl(${random(0,360)},80%,60%)`: type==='balloon'?'#ff9f1c':'#caf0f8';
   }
   update(){
     this.y += this.speedY;
     this.x += this.speedX;
-    this.opacity -=0.01;
+    if(this.type==='balloon'){ this.y+= this.speedY/2; } // floating slow
+    this.opacity -= (this.type==='balloon'?0.001:0.01);
     if(this.opacity<0) this.opacity=0;
   }
   draw(){
@@ -191,6 +193,12 @@ class Particle {
 
 function animate(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  // Add floating balloons randomly
+  if(Math.random()<0.02){
+    particles.push(new Particle(random(0,canvas.width),canvas.height+20,'balloon'));
+  }
+
   for(let i=particles.length-1;i>=0;i--){
     particles[i].update();
     particles[i].draw();
